Fix the background hero image position issue on iOS mobile

--- a/components/Hero/Hero.css
+++ b/components/Hero/Hero.css
@@ -19,6 +19,7 @@
 
   @media (width <= 768px) {
     background-position: 20% center;
+    background-attachment: scroll;
   }
 
   /** Header name - 'Charing' */
@@ -42,6 +43,7 @@
     @media (width < 500px) {
       font-size: 70px;
       margin: 10px 0 0;
+      text-shadow: none;
     }
   }
 }
